k8s/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: monitor-backend
  namespace: devops-monitor
spec:
  selector:
    app: monitor-backend
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
